@@ -13,6 +13,10 @@
 * https://github.com/serpro69/kotlin-faker/pull/214[#214] [core] Update dictionary files, including:
 ** Data and functions in existing data providers
 ** `Faker().internet.domain()` now takes optional argument and produces a "safe-domain" (ending with `.example` or `.test`)
+** New functions:
+*** `Faker().internet.iPv4Address()`
+*** `Faker().internet.publicIPv4Address()`
+*** `Faker().internet.privateIPv4Address()`
 ** Updates to existing localized dictionaries + one new locale
 * https://github.com/serpro69/kotlin-faker/issues/208[#208] [core] Allow `StringProvider#regexify` to take Regex as input
 * https://github.com/serpro69/kotlin-faker/pull/202[#202] [core] Allow `randomClassInstance` to directly use predefined generators
